Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.1.48, 10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL)
-
None
-
Linux - Ubuntu 18.04
Description
Subquery using the ALL keyword on date columns produces a wrong result.
How to reproduce
CREATE TABLE sq1 (d DATE);
INSERT INTO sq1 VALUES ('2021-11-17'), ('2021-10-17'),('2022-11-17'), ('2020-10-17');
SELECT * FROM sq1 WHERE d >= ALL (SELECT * FROM sq1);
Result
d
------------
2021-11-17
2022-11-17
Expected result
d
--------------
2022-11-17
Attachments
Issue Links
- relates to
-
MDEV-27098 Subquery using the ALL keyword on TIME columns produces a wrong result
-
- Closed
-