MDEV-27072 Subquery using the ALL keyword on date columns produces a wrong result